--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -4,10 +4,11 @@
 html{font-size: 18px; color: #555; line-height: 1.5;} 
 body{ 
     user-select: none; 
-      -webkit-user-select: none;
-      -webkit-tap-highlight-color: transparent;
-       margin: 0; padding: 0;
-       font-family:"";
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    margin: 0; padding: 0;
+    font-family:"";
+    background-color: ;
 }
 h1,h2,h3,h4,h5,p,figure{margin: 0; padding: 0;}
 ol,ul,li{list-style: none; margin: 0; padding:0;}
