--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -1,2 +1,50 @@
 @import "./common";
 
+:root {
+    --color-white: #F9F9F9;
+    --color-gray: #F0F0F0;
+    --color-black: #3C3C3C;
+    --color-green1: #8CC63E;
+    --color-green2: #B7D47F;
+    --color-green3: #DCEFB7;
+} 
+
+body {
+    background-color: var(--color-white);
+}
+
+header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 30px 0;
+    z-index: 10;
+}
+
+.header-wrap {
+    width: 1400px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.header-nav {
+    display: flex;
+    align-items: baseline;
+}
+
+
+.header-nav>h1>a {}
+
+.header-nav>h1>a>img {}
+
+.header-nav>nav {}
+
+.header-nav>nav>a {
+    color: #fff;
+    font-weight: 500;
+    padding: 0 25px;
+    position: relative;
+}
