--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,9 @@ body {
   -webkit-tap-highlight-color: transparent;
   margin: 0;
   padding: 0;
-  font-family: "";
+  font-family: "nanum-regular";
+  letter-spacing: -1px;
+  word-break: keep-all;
 }
 
 h1, h2, h3, h4, h5, p, figure {
