--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -335,7 +335,7 @@
                         // 가로세로 비율
                         aspect-ratio: 315 / 196;
 
-                        background-image: url('/img/index/index_arrowbox_01.png');
+                        background-image: url('../img/index/index_arrowbox_01.png');
                         background-repeat: no-repeat;
                         background-size: contain;
                         padding: 0 10px 45px 0;
