--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -511,6 +511,7 @@ header {
   align-items: center;
   margin: 0 auto;
   padding-bottom: 10px;
+  padding-top: 170px;
 }
 .footer-up-menu .footer-privacy {
   width: 100%;
@@ -962,6 +963,10 @@ header {
   padding-right: 20px;
 }
 
+.main-title-img {
+  padding-top: 122px;
+}
+
 .main-title::after {
   content: "";
   width: 100%;
@@ -1130,6 +1135,7 @@ header {
 .tab-con-03 .susang li .info-2 {
   display: flex;
   gap: 150px;
+  padding-bottom: 100px;
   align-items: center;
 }
 .tab-con-03 .susang li .info-2 strong {
@@ -1141,6 +1147,7 @@ header {
   flex-direction: row-reverse;
   gap: 150px;
   align-items: center;
+  padding-bottom: 100px;
 }
 .tab-con-03 .susang li .info-3 strong {
   font-size: 25px;
