--- a/css/index.css
+++ b/css/index.css
@@ -511,6 +511,7 @@ header {
   align-items: center;
   margin: 0 auto;
   padding-bottom: 10px;
+  padding-top: 170px;
 }
 .footer-up-menu .footer-privacy {
   width: 100%;
