--- a/css/scss/sustainability.scss
+++ b/css/scss/sustainability.scss
@@ -1,6 +1,5 @@
 @import "_common";
 
-
 :root {
     --color-white: #F9F9F9;
     --color-gray: #F0F0F0;
@@ -9,6 +8,7 @@
     --color-green2: #B7D47F;
     --color-green3: #DCEFB7;
 } 
+
 .main-title{
     margin: 50px 142px 90px;
     overflow: hidden;
@@ -57,6 +57,7 @@
     width: 1636px;
     margin: 0 auto;
 }
+
 .tab-head{
     text-align: center;
 }
@@ -67,10 +68,10 @@
         padding-top: 90px;
         letter-spacing: -2px;
     }
+    
     span{color: #8DC63F;}
 
     .sb-01{text-align: center;
-        padding-top: 30px;
             padding-bottom: 60px;
         b{font-size: 30px; color: #8DC63F;
             line-height: 5;
@@ -85,8 +86,8 @@
         }
     }
 }
+
 .tab-con-01{
-    
     ul{font-size: 20px;
         li{
             display: flex;
@@ -117,6 +118,7 @@
 
 //tab-con-02
 .tab-con-02{
+
     .pic{
         width:100%;
         padding:70px;
@@ -144,6 +146,8 @@
                     gap:30px;
                     align-items: center;
                     margin:10px 0px;
+
+                    
 
 
                     strong{
@@ -228,3 +232,7 @@
 }
 }
 }
+
+
+
+@import "_res_sustainability";
