--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -156,7 +156,7 @@ header {
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        padding-right: 340px;
+        padding-right: 480px;
 
         a {
             margin-left: 20px;
@@ -460,6 +460,10 @@ header {
 
 @media(max-width:480px) {
 
+    header {
+        z-index: 15;
+    }
+
     $wid2 : calc(100% - 50px);
 
     // pc 헤더 안보이게 설정
@@ -582,6 +586,7 @@ header {
         li {
             font-family: 'money';
             margin-bottom: 10px;
+            white-space: nowrap;
 
             span {
                 color: var(--color-black);
@@ -650,6 +655,10 @@ header {
 // footer ****************
 // [PC] ******************
 // ***********************
+
+footer {
+    padding-top: 170px;
+}
 
 .footer-up-menu {
     width: $wid0;
@@ -843,6 +852,7 @@ header {
                     &:nth-of-type(1) {
                         width: 100px;
                         font-size: 15px;
+                        white-space: nowrap;
                     }
 
 
@@ -877,6 +887,7 @@ header {
                 flex-wrap: nowrap;
                 align-items: center;
                 .footer-logo {
+                    display: none;
                     h1 {
                         width: 80px;
                         margin-right: 15px;
@@ -986,6 +997,7 @@ header {
             
         }
         .footer-privacy-img {
+            display: none;
             width: 80px;
             margin-left: 15px;
             img {
@@ -1030,7 +1042,7 @@ header {
             a {
                 font-family: 'NanumGothic';
                 color: var(--color-black);
-                font-size: 12px;
+                font-size: 13px;
 
                 &:hover {
                     color: #0e0e0e;
@@ -1043,6 +1055,7 @@ header {
         }
 
         .footer-sns {
+            display: none;
             ul {
                 display: flex;
                 align-items: center;
@@ -1075,6 +1088,7 @@ header {
         .footer-back {
             align-items: center;
             display: flex;
+            flex-direction: column;
             width: $wid2;
             padding: 30px 0;
             margin: 0 auto;
@@ -1140,7 +1154,7 @@ header {
                 color: var(--color-black);
                 border: none;
                 padding: 12px;
-                width: 150px;
+                width: 250px;
                 text-align: left;
                 cursor: pointer;
                 font-size: 12px;
@@ -1153,7 +1167,7 @@ header {
                 z-index: 1;
                 font-weight: 400;
                 background-color: #f9f9f9;
-                min-width: 150px;
+                min-width: 250px;
             }
             .dropdown-content2 {
                 display: none;
@@ -1162,7 +1176,7 @@ header {
                 z-index: 1;
                 font-weight: 400;
                 background-color: #f9f9f9;
-                min-width: 150px;
+                min-width: 250px;
             }
             .dropdown-content3 {
                 display: none;
@@ -1171,7 +1185,7 @@ header {
                 z-index: 1;
                 font-weight: 400;
                 background-color: #f9f9f9;
-                min-width: 150px;
+                min-width: 250px;
             }
 
 
