--- a/css/scss/index.scss
+++ b/css/scss/index.scss
@@ -1,5 +1,4 @@
     @import "./_common";
-    @import "./_res";
 
     
     body {
@@ -7,7 +6,8 @@
         font-family: 'NanumGothic';
     }
 
-    $wid : calc(100% - 284px);
+    $wid: calc(100% - 284px);
+
     $nanum1 : 'NanumGothic';
     $nanum2 : 'NanumGothicBold';
     $nanum3 : 'NanumGothicExtraBold';
@@ -100,13 +100,22 @@
         width: 100%;
         overflow: hidden;
     }
+
+    .sec2-slider-tablet {
+        display: none;
+    }
     
+    .sec2-slider-mobile {
+        display: none;
+    }
+
     .container {
         width: 100%;
         height: 65vh;
         display: flex;
         overflow: hidden;
         flex-wrap: nowrap;
+        
     }
     
     .img-wrap {
@@ -128,7 +137,9 @@
         cursor: pointer;
         box-sizing: border-box;
         filter: brightness(70%);
+        transition: opacity 0.3s ease;
     }
+
 
     .container:has(.img-wrap.active) .img-wrap:not(.active) {
         filter: grayscale(100%);
@@ -147,14 +158,16 @@
         left: 10%;
         opacity: 0;
         transition: opacity 0.3s ease-in-out;
+        font-family: $nanum1;
         b{
             color: var(--color-white);
             
             &:nth-of-type(1){
-                font-size: 6.5vw;
+                font-size: 8vw;
+                opacity: 60%;
             }
             &:nth-of-type(2){
-                margin: 60px 0 10px;
+                margin: 70px 0 10px;
                 font-size: 2.5vw;
             }
             &:nth-of-type(3){
@@ -176,6 +189,10 @@
         background-color: var(--color-white);
         display: flex;
         justify-content: center;
+    }
+
+    .sec3-object-mobile {
+        display: none;
     }
 
     .sec3-object-wrap {
@@ -251,17 +268,33 @@
     //section 4
 
     .sec4 {
-        height: 1000px;
+        height: 100vh;
         background-color: var(--color-green2);
         display: flex;
         justify-content: center;
     }
 
+    
+
     .sec4-tab-menu{
         width: 100%;
-        height: 65vh;
+        height: 60vh;
         padding: 60px 0;
         margin: 0 auto;
+        position: relative;
+
+        .sec4-slogun {
+            position: absolute;
+            right: 0;
+            b {
+                letter-spacing: 5px;
+                font-family: 'money';
+                color: #f9f9f9;
+                font-weight: normal;
+                font-size: 30px;
+            }
+        }
+
         .tabs{
             padding: 0px;
             list-style: none;
@@ -288,6 +321,16 @@
                 }
             }
         }
+
+        
+    }
+
+    @media(max-width:950px) {
+        .sec4-slogun {
+            display: none;
+        }
+
+
     }
     
     .tab-content{
@@ -302,6 +345,14 @@
             display: flex;
             justify-content: center;
             display: inherit;
+            position: relative;
+        }
+
+        .tab-menu-1-mobile {
+            display: none;
+        }
+        .tab-menu-2-mobile {
+            display: none;
         }
 
         .tab-menu-1 {
@@ -311,8 +362,7 @@
             flex-direction: column;
             margin: 30px 50px 0;
 
-            b{
-                font-family: $nanum3;
+            b {
                 font-size: 20px;
             }
 
@@ -375,13 +425,137 @@
                     }
                 }
             }
+
+            .tab-charac-1 {
+                position: absolute;
+                top: 45%;
+                left: 2%;
+                max-width: 10vw;
+                display: flex;
+                flex-direction: column;
+                img {
+                    &:nth-of-type(1) {
+                        width: 100%;
+                        margin-bottom: 5px;
+                    }
+                    &:nth-of-type(2) {
+                        width: 100%;
+                    }
+                }
+            }
+            @media(max-width:1600px) {
+                .tab-charac-1 {
+                    display: none;
+                }
+            }
+            
+
+            
         }
 
         .tab-menu-2 {
-            width: 1277px;
+            text-align: center;
             display: flex;
             justify-content: center;
-            margin: 30px 0;
+            flex-direction: column;
+            margin: 30px 50px 0;
+
+            .square-box {
+                display: flex;
+                justify-content: center;
+                a{
+                    margin-top: 30px;
+                    height: auto;
+                    div {
+                        margin: 0 20px;
+                        border-radius: 40px;
+                        padding: 30px 20px;
+                        background-color: var(--color-green3);
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        box-shadow: 0px 2px 4px #b7b7b7;
+
+                        b{
+                            white-space: pre-line;
+                            color: var(--color-black);
+
+                            &:nth-of-type(1) {
+                                font-family: 'money';
+                                font-weight: normal;
+                                font-size: 25px;
+                            }
+                            &:nth-of-type(2) {
+                                font-family: $nanum1;
+                                font-weight: normal;
+                                font-size: 18px;
+                            }
+                        }
+                        img {
+                            width: 50%;
+                            margin: 20px 0;
+                        }
+
+                        &:active {
+                            box-shadow: inset 0px 0px 5px #a2a2a2
+                        }
+                    }
+                
+                    &:hover {
+                        filter: contrast(80%);
+                    }
+                    
+                }
+            }
+
+            .tab-charac-2 {
+                position: absolute;
+                top: 65%;
+                right: 1%;
+                max-width: 15vw;
+                display: flex;
+                flex-direction: column;
+                img {
+                    width: 100%;
+                }
+            }
+            @media(max-width:1600px) {
+                .tab-charac-2 {
+                    display: none;
+                }
+            }
+        }
+
+        
+
+        .tab-song-wrap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 40px 0;
+            
+            button {
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                background-color: var(--color-white);
+                border: solid var(--color-green1);
+                border-radius: 30px;
+                padding: 5px 40px;
+                margin-right: 30px;
+                span {
+                    margin-right: 10px;
+                    color: var(--color-black);
+                    font-family: 'money';
+                    font-size: 20px;
+                }
+            }
+            b{
+                color: var(--color-black);
+                font-size: 1vw;
+                font-weight: normal;
+            }
         }
     }
 
@@ -394,3 +568,183 @@
         display: flex;
         justify-content: center;
     }
+
+    .sec5-news-mobile {
+        display: none;
+    }
+
+
+    .swiper {
+        width: 85%;
+        max-height: 30vw;
+        margin-top: 60px;
+        border-radius: 40px;
+    }
+
+    .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: var(--color-green3);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+
+        a {
+            span {
+                z-index: 1;
+                top: 8%;
+                left: 5%;
+                position: absolute;
+                color: var(--color-white);
+                font-family: $nanum3;
+                font-size: 20px;
+                border-bottom: solid 2px var(--color-white);
+            }
+    
+            b{
+                position: absolute;
+                display: block;
+                overflow: hidden;
+    
+                max-width: 1200px;
+                width: 80%;
+                transform: translate(50%);
+                right: 50%;
+                bottom: 0;
+                
+    
+                &:nth-of-type(1) {
+                    color: var(--color-white);
+                    bottom: 28%;
+                    // 텍스트 끝을 ...로 설정
+                    text-overflow: ellipsis;
+                    font-size: 30px;
+                    white-space: nowrap;
+                }
+                &:nth-of-type(2) {
+                    color: var(--color-gray);
+                    font-weight: normal;
+                    bottom: 12%;
+                    text-overflow: ellipsis;
+                    font-size: 1vw;
+                    // 여러 줄일때 텍스트 라인 제한두기
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                }
+            }
+        }
+        
+    }
+
+    .swiper-slide a {
+        img {
+            filter: brightness(45%);
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .swiper {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .swiper-button-next:after, .swiper-button-prev:after {
+        color: var(--color-white);
+    }
+
+    .swiper-button-next:after {
+        padding-right: 30px;
+    }
+    .swiper-button-prev:after {
+        padding-left: 35px;
+    }
+
+    .swiper-pagination-bullet-active {
+        background: var(--color-white) !important; 
+    }
+
+    .swiper-pagination-bullet {
+        width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 12px)) !important;
+        height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 12px)) !important;
+        border: solid 2px var(--color-white) !important;
+    }
+
+    .swiper-pagination {
+        bottom: 4% !important;
+    }
+
+    // section 6
+
+    .sec6 {
+        height: 1000px;
+        background-color: var(--color-white);
+        display: flex;
+        justify-content: center;
+    }
+
+    .sec6-medias {
+        padding-top: 60px;
+    }
+
+    .sec6-imglist {
+        display: flex;
+        justify-content: space-between;
+        
+        .imglist-1 {
+            display: flex;
+            align-items: center;
+            width: 50%;
+            a {
+                img 
+                {
+                    object-fit: cover; 
+                    width: 28vw;
+                    height: auto;
+                    display: block;
+                    transition: opacity 0.3s ease;
+                    &:hover {
+                        opacity: 0.7;
+                    }
+                }
+            }
+        }
+
+        .imglist-2 {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                width: 100%;
+                max-width: 100%;
+                justify-content: space-evenly;
+
+                li {
+                    width: calc(50% - 10px);
+                    max-width: 25vw;
+                    flex: 1 1 auto;
+                    margin: 5px 0;
+                    padding: 0 5px;
+                    img {
+                        width: 100%;
+                        height: auto;
+                        display: block;
+                        transition: opacity 0.3s ease;
+                        &:hover {
+                            opacity: 0.7;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+
+    
+    @import "./_indexres.scss";
