--- a/css/scss/_newsres.scss
+++ b/css/scss/_newsres.scss
@@ -602,7 +602,7 @@ ul.tabs li.current{
     ul.tabs li{
         flex: 1;
         text-align: center;
-        background-color: var(--color-green3);
+        background-color: none !important;
         color: var(--color-black);
         display: inline-block;
         padding: 20px 20px;
@@ -614,7 +614,7 @@ ul.tabs li.current{
     }
     
     ul.tabs li.current{
-        background: var(--color-green2);
+        background: none !important;
         color: var(--color-black);
         font-weight: bold;
     }
@@ -623,7 +623,7 @@ ul.tabs li.current{
         margin-top: 30px;
         border-radius: 0 20px 20px 20px;
         display: none;
-        background: var(--color-green2);
+        background: none !important;
         padding: 50px 10px 40px;
     }
     
