--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -1011,6 +1011,13 @@ header {
   font-size: 50px;
   padding-top: 90px;
   letter-spacing: -2px;
+  opacity: 0;
+  transform: translateY(30%);
+  transition: 1s;
+}
+.tab-body h2.act {
+  opacity: 1;
+  transform: translateY(0%);
 }
 .tab-body span {
   color: #8DC63F;
@@ -1023,13 +1030,26 @@ header {
   font-size: 30px;
   color: #8DC63F;
   line-height: 5;
+  opacity: 0;
+  transform: translateY(10%);
+  transition: 0.5s;
+}
+.tab-body .sb-01 b.act {
+  opacity: 1;
 }
 .tab-body .sb-01 p {
   font-size: 20px;
   line-height: 1.6;
+  opacity: 0;
+  transform: translateY(30%);
 }
 .tab-body .sb-01 p span {
   font-size: 25px;
+}
+.tab-body .sb-01 p.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1.5s;
 }
 
 .tab-con-01 ul {
@@ -1042,20 +1062,29 @@ header {
   background-color: #F8F8F8;
   width: 1140px;
   margin: 10px auto;
+  word-break: keep-all;
+  opacity: 0;
+  transform: translateY(40%);
 }
 .tab-con-01 ul li b {
   width: 20%;
 }
 .tab-con-01 ul li div p {
   display: flex;
+  font-weight: 600;
 }
 .tab-con-01 ul li div p::before {
   content: "";
-  width: 7px;
-  height: 7px;
+  width: 5px;
+  height: 5px;
   background-color: black;
   border-radius: 100%;
   margin: 10px 10px 0 0;
+}
+.tab-con-01 ul li.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1s;
 }
 .tab-con-01 ul .bc {
   background-color: #f0f0f0;
@@ -1084,12 +1113,21 @@ header {
 }
 .tab-con-02 .esg li > figure img {
   width: 100%;
+  opacity: 0;
+  transform: translateY(20%);
+}
+.tab-con-02 .esg li > figure img.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1s;
 }
 .tab-con-02 .esg li .info {
   width: 47%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  opacity: 0;
+  transform: translateY(20%);
 }
 .tab-con-02 .esg li .info div {
   display: flex;
@@ -1101,12 +1139,19 @@ header {
   display: block;
   margin-bottom: 20px;
 }
+.tab-con-02 .esg li .info.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 0.5s 0.3s;
+}
 .tab-con-02 .esg li:nth-of-type(2n) {
   flex-direction: row-reverse;
 }
 .tab-con-02 .sb-03 {
   padding-top: 120px;
   text-align: center;
+  opacity: 0;
+  transform: translateY(30%);
 }
 .tab-con-02 .sb-03 b {
   font-size: 30px;
@@ -1126,6 +1171,11 @@ header {
 .tab-con-02 .sb-03 figure img {
   border-radius: 46px;
 }
+.tab-con-02 .sb-03.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1.2s;
+}
 
 .tab-con-03 .susang li {
   width: 1320px;
@@ -1136,6 +1186,15 @@ header {
   gap: 150px;
   padding-bottom: 100px;
   align-items: center;
+}
+.tab-con-03 .susang li .info-2 img {
+  opacity: 0;
+  transform: translateY(20%);
+}
+.tab-con-03 .susang li .info-2 img.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1s;
 }
 .tab-con-03 .susang li .info-2 strong {
   font-size: 25px;
@@ -1148,6 +1207,15 @@ header {
   align-items: center;
   padding-bottom: 100px;
 }
+.tab-con-03 .susang li .info-3 img {
+  opacity: 0;
+  transform: translateY(20%);
+}
+.tab-con-03 .susang li .info-3 img.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1s;
+}
 .tab-con-03 .susang li .info-3 strong {
   font-size: 25px;
   display: block;
@@ -1158,12 +1226,28 @@ header {
   align-items: center;
   gap: 150px;
 }
+.tab-con-03 .susang li .info-4 img {
+  opacity: 0;
+  transform: translateY(20%);
+}
+.tab-con-03 .susang li .info-4 img.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 1s;
+}
 .tab-con-03 .susang li .info-4 strong {
   font-size: 25px;
   display: block;
 }
 .tab-con-03 .susang li p {
   font-size: 30px;
+  opacity: 0;
+  transform: translateY(20%);
+}
+.tab-con-03 .susang li p.act {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: 0.5s 0.3s;
 }
 
 @media (min-width: 1024px) and (max-width: 1700px) {
